--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,24 @@
    --bz-bg-hover-chat-list: #f2f2f2;
 }
 
+/* #region scrollbar */
+::-webkit-scrollbar {
+   width: 10px;
+ }
+ 
+ ::-webkit-scrollbar-track {
+   background: #f8f8f8; 
+ }
+  
+ ::-webkit-scrollbar-thumb {
+   background: #b8b8b8; 
+ }
+ 
+ ::-webkit-scrollbar-thumb:hover {
+   background: #ababab; 
+ }
+/* #endregion scrollbar */
+
 main{
    width: 1170px;
    height: calc(100vh - 3rem);
