--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,14 @@ i{
             & i{
                font-size: 0.8rem;
             }
+
+            & .delete-search{
+               position: absolute;
+               top: 50%;
+               right: 0;
+               transform: translate(-75%, -50%);
+               z-index: 100;
+            }
          }
 
          & #chats-list-container > div:hover{
